v0.8.0
======
Minor number change because the asset manifest was removed.
- Remove assets manifest
- Minimized memory footprint for upload and replace
- handling upload/replace wildcards more gracefully
- better errors for connection issues
- better errors for auth issues
- better errors for timeouts
- warning while working on live themes

v0.7.5  (Nov 3, 2017)
=====================
- Fixing bad manifest pruning

v0.7.4 (Sep 18, 2017)
=====================
- Fixing how the manifest deals with dates

v0.7.3 (Aug 28, 2017)
=====================
- Fixing symlinks used as project directory
- Fixing race condition in manifest reads
- Fixing environment flag on the configure command
- Skipping invalid configs to allow invalid re-usable config

v0.7.2 (Aug 21, 2017)
=====================
- Fixing windows watch paths

v0.7.1 (Aug 21, 2017)
=====================
- Filtering out files properly on download
- Local changes to a file on disk are now considered on every upload/replace
- Fixing a hanging progress bar
- Downloading files that are in manifest but not on disk
- Fixing remove for non updated assets

v0.7.0 (Aug 14, 2017)
=====================
Minor number change because the asset manifest was added. This allowed themekit
to check the version of files on the remote server so that the developer would
not be able to overwrite changes.
- Glob env flag and multiple env flags
- Handling opening live themes in the open command
- Strict path checking to make sure files are in the project
- Remote File Checking
- Browser flag on open command

v0.6.12 (May 24, 2017)
=====================
- Throttle api calls per domain
- Show open link with open command
- Simplify install script and make it use the cdn
- Powershell install script
- Handling renaming events better
- Fixing updating compiled assets

v0.6.11 (Apr 3, 2017)
=====================
- Better error message for bad config files
- Added a no-ignore flag
- Fixed asset request query params encoding

v0.6.10 (Mar 10, 2017)