@@ -24,10 +24,10 @@ func New(domain string, apiLimit time.Duration) *Limiter {
 
 func (limiter *Limiter) next() {
 	go func(l *Limiter) {
-		select {
-		case <-time.Tick(l.apiLimit):
-			l.nextChan <- true
-		}
+		ticker := time.NewTicker(l.apiLimit)
+		<-ticker.C
+		ticker.Stop()
+		l.nextChan <- true
 	}(limiter)
 }
 
