@@ -1,6 +1,9 @@
 v0.8.0
 ======
-Minor number change because the asset manifest was removed.
+Minor number change because the asset manifest was removed and added a get
+command as well as renamed bootstrap to new
+- new command
+- get command
 - Remove assets manifest
 - Minimized memory footprint for upload and replace
 - handling upload/replace wildcards more gracefully
@@ -8,6 +11,9 @@ Minor number change because the asset manifest was removed.
 - better errors for auth issues
 - better errors for timeouts
 - warning while working on live themes
+- fixing a problem with time.Ticker that causes high CPU
+- moved to buildkite
+- code coverage
 
 v0.7.5  (Nov 3, 2017)
 =====================
